# backend

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  compose.yml
.github/workflows/: prd.yml
aws/: ecs-task-definition.json
src/: main.rs
src/routes/: auth_routes.rs  index_routes.rs  map_routes.rs  mod.rs  test_routes.rs  user_routes.rs
src/routes/handlers/: auth_handlers.rs  index_handlers.rs  map_handlers.rs  mod.rs  test_handlers.rs  user_handlers.rs
src/routes/middlewares/: auth_middleware.rs  inactivity_middleware.rs  mod.rs
src/utils/: app_state.rs  auth.rs  environment_variables.rs  global_variables.rs  jwt.rs  mod.rs  models.rs  user.rs
