[package]
name = "subscription_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
env_logger = "0.11.5"
dotenv = "0.15.0"
lazy_static = "1.5.0"
sha256 = "1.5.0"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
redis = { version = "0.26.1", features = ["tokio-comp"] }
anyhow = "1.0.86"
tokio = { version = "1.40.0", features = ["full"] }
aws-config = { version= "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.43.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
